@@ -605,6 +605,9 @@ case "$1" in
                     exit 1
                   fi
                 else
+                  echo "You must correct your GRUB install devices before proceeding:" >&2
+                  echo >&2
+                  echo "  dpkg-reconfigure grub-pc" >&2
                   exit 1 # noninteractive
                 fi
               else
@@ -621,7 +624,10 @@ case "$1" in
                     continue
                   fi
                 else
-                  break # noninteractive
+                  echo "You must correct your GRUB install devices before proceeding:" >&2
+                  echo >&2
+                  echo "  dpkg-reconfigure grub-pc" >&2
+                  exit 1 # noninteractive
                 fi
               fi
             fi
@@ -644,7 +650,7 @@ case "$1" in
                   db_fset grub-pc/install_devices_empty seen false
                 fi
               else
-                break # noninteractive
+                exit 1 # noninteractive
               fi
             else
               break
