@@ -3,6 +3,11 @@ grub2 (2.04-10) UNRELEASED; urgency=medium
   [ Ian Campbell ]
   * Remove myself from uploaders.
 
+  [ Colin Watson ]
+  * When upgrading grub-pc noninteractively, bail out if grub-install fails.
+    It's better to fail the upgrade than to produce a possibly-unbootable
+    system.
+
  -- Ian Campbell <ijc@debian.org>  Sat, 27 Jun 2020 10:32:02 +0100
 
 grub2 (2.04-9) unstable; urgency=high
